--- a/CafeBazaar.html
+++ b/CafeBazaar.html
@@ -758,7 +758,65 @@
                 </div>
             </div>
         </section>
-        <!-- ************************* -->
+        <section class="showcase-applications">
+            <div class="title">
+                <h2>ویترین برنامه‌ها</h2>
+                <a href="https://cafebazaar.ir/lists/practical-applications">بیشتر <i aria-hidden="true"
+                        class="fa fa-chevron-left"></i></a>
+            </div>
+            <div class="apps">
+                <div class="showcase-app" id="one">
+                    <a href="https://cafebazaar.ir/app/com.flightio.app">
+                        <img src="images/1.webp">
+                    </a>
+                </div>
+                <div class="showcase-app" id="two">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/2.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="three">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/3.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="four">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/4.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="five">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/5.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="six">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/6.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="seven">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/7.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="eight">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/8.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="nine">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/9.webp" alt="">
+                    </a>
+                </div>
+                <div class="showcase-app" id="ten">
+                    <a href="https://cafebazaar.ir/app/app.emtiyaz">
+                        <img src="images/10.webp" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
         <section class="applications">
             <div class="title">
                 <h2>برنامه های کاربردی</h2>
@@ -1478,6 +1536,69 @@
                             <h3>Musiz Player</h3>
                             <p>موسیقی</p>
                         </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="applications-groups">
+            <div class="title">
+                <h2>دسته‌بندی‌های برنامه</h2>
+                <a href="https://cafebazaar.ir/lists/practical-applications">بیشتر <i aria-hidden="true"
+                        class="fa fa-chevron-left"></i></a>
+            </div>
+            <div class="apps-groups">
+                <div class="group">
+                    <a href="https://cafebazaar.ir/cat/entertainment">
+                        <div class="subject">
+                            <img src="images/app-category-entertainment.webp" alt="">
+                            <h2>سرگرمی</h2>
+                        </div>
+                        <i class="fa fa-chevron-left"></i>
+                    </a>
+                </div>
+                <div class="group">
+                    <a href="https://cafebazaar.ir/cat/entertainment">
+                        <div class="subject">
+                            <img src="images/app-category-entertainment.webp" alt="">
+                            <h2>سرگرمی</h2>
+                        </div>
+                        <i class="fa fa-chevron-left"></i>
+                    </a>
+                </div>
+                <div class="group">
+                    <a href="https://cafebazaar.ir/cat/entertainment">
+                        <div class="subject">
+                            <img src="images/app-category-entertainment.webp" alt="">
+                            <h2>سرگرمی</h2>
+                        </div>
+                        <i class="fa fa-chevron-left"></i>
+                    </a>
+                </div>
+                <div class="group">
+                    <a href="https://cafebazaar.ir/cat/entertainment">
+                        <div class="subject">
+                            <img src="images/app-category-entertainment.webp" alt="">
+                            <h2>سرگرمی</h2>
+                        </div>
+                        <i class="fa fa-chevron-left"></i>
+                    </a>
+                </div>
+                <div class="group">
+                    <a href="https://cafebazaar.ir/cat/entertainment">
+                        <div class="subject">
+                            <img src="images/app-category-entertainment.webp" alt="">
+                            <h2>سرگرمی</h2>
+                        </div>
+                        <i class="fa fa-chevron-left"></i>
+                    </a>
+                </div>
+                <div class="group">
+                    <a href="https://cafebazaar.ir/cat/entertainment">
+                        <div class="subject">
+                            <img src="images/app-category-entertainment.webp" alt="">
+                            <h2>سرگرمی</h2>
+                        </div>
+                        <i class="fa fa-chevron-left"></i>
                     </a>
                 </div>
             </div>
