--- a/CafeBazaar.html
+++ b/CafeBazaar.html
@@ -1551,7 +1551,7 @@
                     <a href="https://cafebazaar.ir/cat/entertainment">
                         <div class="subject">
                             <img src="images/app-category-entertainment.webp" alt="">
-                            <h2>سرگرمی</h2>
+                            <p>سرگرمی</p>
                         </div>
                         <i class="fa fa-chevron-left"></i>
                     </a>
@@ -1559,8 +1559,8 @@
                 <div class="group">
                     <a href="https://cafebazaar.ir/cat/entertainment">
                         <div class="subject">
-                            <img src="images/app-category-entertainment.webp" alt="">
-                            <h2>سرگرمی</h2>
+                            <img src="images/app-category-education.webp" alt="">
+                            <p>آموزش</p>
                         </div>
                         <i class="fa fa-chevron-left"></i>
                     </a>
@@ -1568,8 +1568,8 @@
                 <div class="group">
                     <a href="https://cafebazaar.ir/cat/entertainment">
                         <div class="subject">
-                            <img src="images/app-category-entertainment.webp" alt="">
-                            <h2>سرگرمی</h2>
+                            <img src="images/app-category-shopping.webp" alt="">
+                            <p>خرید</p>
                         </div>
                         <i class="fa fa-chevron-left"></i>
                     </a>
@@ -1577,8 +1577,8 @@
                 <div class="group">
                     <a href="https://cafebazaar.ir/cat/entertainment">
                         <div class="subject">
-                            <img src="images/app-category-entertainment.webp" alt="">
-                            <h2>سرگرمی</h2>
+                            <img src="images/app-category-social.webp" alt="">
+                            <p>اجتماعی</p>
                         </div>
                         <i class="fa fa-chevron-left"></i>
                     </a>
@@ -1586,8 +1586,8 @@
                 <div class="group">
                     <a href="https://cafebazaar.ir/cat/entertainment">
                         <div class="subject">
-                            <img src="images/app-category-entertainment.webp" alt="">
-                            <h2>سرگرمی</h2>
+                            <img src="images/app-category-photography.webp" alt="">
+                            <p>عکاسی</p>
                         </div>
                         <i class="fa fa-chevron-left"></i>
                     </a>
@@ -1595,8 +1595,8 @@
                 <div class="group">
                     <a href="https://cafebazaar.ir/cat/entertainment">
                         <div class="subject">
-                            <img src="images/app-category-entertainment.webp" alt="">
-                            <h2>سرگرمی</h2>
+                            <img src="images/app-category-finance.webp" alt="">
+                            <p>مالی</h2>
                         </div>
                         <i class="fa fa-chevron-left"></i>
                     </a>
