--- a/CafeBazaar.html
+++ b/CafeBazaar.html
@@ -1755,7 +1755,69 @@
             </button>
 
         </section>
+
     </main>
+
+    <footer>
+        <div class="application-information">
+            <div class="descriptions">
+                <h3>بازار، نخستین و پرمخاطب‌ترین فروشگاه ایرانی برنامه‌ها و بازی‌های موبایلی دنیای اندروید</h3>
+                <p>صد‌ها هزار بازی ایرانی و خارجی دیتادار یا بدون دیتا را با ترافیک نیم‌بها نصب کنید و به سادگی خرید
+                    درون‌ برنامه‌ای انجام دهید. بازار مجهز به سپر امنیت است که برنامه‌ها را توسط آنتی ویروس‌ها بررسی
+                    کرده و به محض شناسایی برنامه‌ی مخرب، به کاربر اعلام می‌کند که آن برنامه را از دستگاه خود پاک کند.
+                </p>
+            </div>
+            <div class="app-download">
+                <img src="images/footer-download.webp" alt="">
+                <div class="download">
+                    <h3>دانلود اپلیکیشن بازار</h3>
+                    <p>پرمخاطب‌ترین اپ‌استور (اندروید) فارسی‌زبانان</p>
+                    <ul>
+                        <li><a href="https://cafebazaar.ir/install?manual=1&autostart">نسخه اندروید</a></li>
+                        <li><a href="https://tv.cafebazaar.ir/">نسخهٔ اندروید TV</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="company-information">
+            <div class="company-details">
+                <ul>
+                    <li><a href="">نصب بازار</a></li>
+                    <li><a href="">توسعه‌دهندگان بازار</a></li>
+                    <li><a href="">شرایط استفاده</a></li>
+                    <li><a href="">بلاگ بازار</a></li>
+                    <li><a href="">تبلیغات در بازار</a></li>
+                    <li><a href="">بازی اندروید</a></li>
+                    <li><a href="">فرصت‌های شغلی</a></li>
+                    <li><a href="">حریم خصوصی</a></li>
+                    <li><a href="">خبرها و بیانیه‌های بازار</a></li>
+                    <li><a href="">درباره ما</a></li>
+                    <li><a href="">برنامه اندروید</a></li>
+                    <li><a href="">نشان دریافت از بازار</a></li>
+                    <li><a href="">پشتیبانی</a></li>
+                    <li><a href="">بلاگ فنی بازار</a></li>
+                    <li><a href="">تماس با ما</a></li>
+                </ul>
+            </div>
+            <div class="logos">
+                <ul>
+                    <li><a href=""><img src="images/logo.png" alt=""></a></li>
+                    <li><a href=""><img src="images/Samandehi.webp" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <nav class="footer-nav">
+        <p>
+            تمامی حقوق این سایت متعلق به شرکت آوای همراه هوشمند هزاردستان (فروشگاه برنامه‌های موبایلی اندروید بازار)
+            است.
+        </p>
+        <ul>
+            <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
