--- a/CafeBazaar.html
+++ b/CafeBazaar.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <a class="bazaar-logo" href="https://cafebazaar.ir"><img src="images/bazaar-logo.svg" alt=""></a>
+        <button class="header-menu-burger" onclick="showMenu()"><i class="fa fa-bars"></i></button>
         <ul class="header-menu">
             <li><button>برنامه</button></li>
             <li><button>بازی</button></li>
@@ -31,7 +32,14 @@
         <a href="https://cafebazaar.ir/pre-install" class="pre-install">دانلود بازار</a>
         <button class="change-lang"><i class="fa fa-gear" aria-hidden="true"></i></button>
     </header>
+
     <main>
+        <ul class="burger-menu" id="menu">
+            <li><a>برنامه</a></li>
+            <li><a>بازی</a></li>
+            <li><a href="https://help.cafebazaar.ir/">پشتیبانی</a></li>
+            <li><a>سایر</a></li>
+        </ul>
         <section class="programs">
             <h1>برنامه ها</h1>
         </section>
